[package]
name = "roguelike_multiplayer"
version = "0.1.0"
authors = ["antoinePaulinB7 <apaulinb7@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix = "0.10.0"
actix-web = "3.2.0"
actix-web-actors = "3"
uuid = { version = "0.8", features= ["v4", "serde"] }
